@@ -1,3 +1,9 @@
+2009-10-14  Alan Modra  <amodra@bigpond.net.au>
+
+	* bfdlink.h (enum bfd_link_common_skip_ar_symbols): Rename from
+	bfd_link_common_skip_ar_aymbols.
+	(struct bfd_link_info): Here too.
+
 2009-10-09  Rafael Espindola  <espindola@google.com>
 
 	* plugin-api.h (ld_plugin_add_input_library): Change argument name to
